products to front and nav bar align fix

--- a/code/client/src/App.css
+++ b/code/client/src/App.css
@@ -13,6 +13,21 @@ body {
   width: calc(100% - 0.75em);
 }
 
+
+.test-nav{
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-gap: 20px;
+}
+
+.nested-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 5px;
+  text-align:center;
+  margin: 20px;
+}
+
 #username:focus,
 #password:focus,
 #firstname:focus,
